compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__prefer_list_is_empty_over_list_length_with_arguments_flipped.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        import gleam/list\n\n        pub fn main() {\n            let a_list = []\n            let _ = 0 == list.length(a_list)\n        }\n        "
---

warning: Inefficient empty list check
  ┌─ /src/warning/wrn.gleam:6:21
  │
6 │             let _ = 0 == list.length(a_list)
  │                     ^^^^^^^^^^^^^^^^^^^^^^^^

`list.length` runs in linear time while `list.is_empty` runs in constant time.
Hint: You can use `list.is_empty` instead.

